--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -49,4 +49,4 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
       - name: Run Rubocop
-        run: bundle exec rubocop -DESP
+        run: bundle exec rubocop -DES
