--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,3 @@
-inherit_from: .rubocop_todo.yml
-
-AllCops:
-  TargetRubyVersion: 1.9
-
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
@@ -11,5 +6,5 @@ Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
 
-Layout/LineLength:
+Metrics/LineLength:
   Max: 120
