--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   rubocop:
-    name: Rubocop
+    name: RuboCop
     if: "!contains(github.event.commits[0].message, '[ci skip]') && !contains(github.event.commits[0].message, '[skip ci]')"
     strategy:
       fail-fast: false
@@ -48,5 +48,5 @@ jobs:
         run: |
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
-      - name: Run Rubocop
+      - name: Run RuboCop
         run: bundle exec rubocop -DES
