👷 Running on Ruby 3.1 with new rails
Signed-off-by: Peter Boling <peter.boling@gmail.com>

--- a/.github/workflows/supported.yml
+++ b/.github/workflows/supported.yml
@@ -33,7 +33,7 @@ jobs:
         experimental: [false]
         gemfile:
           - ruby
-          - rails
+          - rails4
         rubygems:
           - "2.7.11"
         bundler:
