--- a/.github/workflows/legacy.yml
+++ b/.github/workflows/legacy.yml
@@ -32,8 +32,8 @@ jobs:
       matrix:
         experimental: [false]
         gemfile:
-          - ruby
-          - rails4
+          - vanilla
+#          - rails4
         rubygems:
           - "2.7.11"
         bundler:
@@ -47,8 +47,6 @@ jobs:
           - "2.4"
           - "2.5"
           - "2.6"
-          - "2.7"
-          - "3.0"
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental || endsWith(matrix.ruby, 'head') }}
     steps:
