--- a/.github/workflows/current.yml
+++ b/.github/workflows/current.yml
@@ -39,7 +39,7 @@ jobs:
         bundler:
           - none
         ruby:
-          - "2.7"
+#          - "2.7"
           - "3.0"
 
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
             ${{ runner.os }}-gems-
       - name: Bundle install
         run: |
-          bundle config path vendor/bundle
+          bundle config set --local path vendor/bundle
           bundle install --jobs 4 --retry 3
       - name: Run RuboCop
         run: bundle exec rubocop -DES
