--- a/.github/workflows/legacy.yml
+++ b/.github/workflows/legacy.yml
@@ -40,13 +40,13 @@ jobs:
           - none
         ruby:
           - "1.9"
-          - "2.0"
-          - "2.1"
-          - "2.2"
-          - "2.3"
-          - "2.4"
-          - "2.5"
-          - "2.6"
+#          - "2.0"
+#          - "2.1"
+#          - "2.2"
+#          - "2.3"
+#          - "2.4"
+#          - "2.5"
+#          - "2.6"
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental || endsWith(matrix.ruby, 'head') }}
     steps:
@@ -67,7 +67,7 @@ jobs:
             ${{ runner.os }}-gems-
       - name: Bundle install
         run: |
-          bundle config path vendor/bundle
+          bundle config set --local path vendor/bundle
           bundle install --jobs 4 --retry 3
       - name: Run RuboCop
         run: bundle exec rubocop -DES
