--- a/.github/workflows/heads.yml
+++ b/.github/workflows/heads.yml
@@ -34,6 +34,10 @@ jobs:
         gemfile:
           - vanilla
 #          - rails7
+        rubygems:
+          - latest
+        bundler:
+          - latest
         ruby:
 #          - jruby-head
           - ruby-head
@@ -49,13 +53,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           rubygems: ${{ matrix.rubygems }}
           bundler: ${{ matrix.bundler }}
-          bundler-cache: false
-      - uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+          bundler-cache: true
       - name: Bundle install
         run: |
           bundle config set --local path vendor/bundle
