--- a/.github/workflows/legacy.yml
+++ b/.github/workflows/legacy.yml
@@ -37,7 +37,7 @@ jobs:
         rubygems:
           - "2.7.11"
         bundler:
-          - none
+          - latest
         ruby:
           - "1.9"
 #          - "2.0"
@@ -58,13 +58,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           rubygems: ${{ matrix.rubygems }}
           bundler: ${{ matrix.bundler }}
-          bundler-cache: false
-      - uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+          bundler-cache: true
       - name: Bundle install
         run: |
           bundle config set --local path vendor/bundle
