--- a/.github/workflows/legacy.yml
+++ b/.github/workflows/legacy.yml
@@ -37,7 +37,7 @@ jobs:
         rubygems:
           - "2.7.11"
         bundler:
-          - latest
+          - none
         ruby:
           - "1.9"
 #          - "2.0"
