--- a/.github/workflows/legacy.yml
+++ b/.github/workflows/legacy.yml
@@ -33,20 +33,20 @@ jobs:
         experimental: [false]
         gemfile:
           - vanilla
-#          - rails4
+          - rails4
         rubygems:
           - "2.7.11"
         bundler:
           - none
         ruby:
           - "1.9"
-#          - "2.0"
-#          - "2.1"
-#          - "2.2"
-#          - "2.3"
-#          - "2.4"
-#          - "2.5"
-#          - "2.6"
+          - "2.0"
+          - "2.1"
+          - "2.2"
+          - "2.3"
+          - "2.4"
+          - "2.5"
+          - "2.6"
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental || endsWith(matrix.ruby, 'head') }}
     steps:
