--- a/.github/workflows/legacy.yml
+++ b/.github/workflows/legacy.yml
@@ -62,6 +62,6 @@ jobs:
       - name: Run RuboCop
         run: bundle exec rubocop -DES
       - name: Run RuboCop for 1.8.7
-        run: bundle exec rubocop -DES --config ${{ github.workspace }}/rubocop-ruby1_8.yml
+        run: bundle exec rubocop -DES --config ${{ github.workspace }}/.rubocop-ruby1_8.yml
       - name: Run tests
         run: bundle exec rake test
