--- a/.github/workflows/current.yml
+++ b/.github/workflows/current.yml
@@ -34,13 +34,16 @@ jobs:
         gemfile:
           - vanilla
           - rails7
-        rubygems:
-          - latest
-        bundler:
-          - latest
         ruby:
           - "2.7"
           - "3.0"
+          - "3.1"
+          - "3.2"
+        exclude:
+          # Vanilla + 2.7 is effectively run by coverage workflow
+          - gemfile: vanilla
+            ruby: "2.7"
+
 
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental || endsWith(matrix.ruby, 'head') }}
@@ -54,9 +57,5 @@ jobs:
           rubygems: ${{ matrix.rubygems }}
           bundler: ${{ matrix.bundler }}
           bundler-cache: true
-      - name: Run RuboCop
-        run: bundle exec rubocop -DES
-      - name: Run RuboCop for 1.8.7
-        run: bundle exec rubocop -DES --config ${{ github.workspace }}/.rubocop-ruby1_8.yml
       - name: Run tests
         run: bundle exec rake test
