--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,47 +1,13 @@
-inherit_gem:
-  rubocop-ruby1_9: rubocop.yml
+# Other projects will do the following:
+#inherit_gem:
+#  # Pick one:
+#  #  rubocop-ruby1_9: rubocop-lts/rails_rspec.yml # or rubocop-lts/rails.yml w/o rspec
+#  #  rubocop-ruby1_9: rubocop-lts/ruby_rspec.yml # or rubocop-lts/ruby.yml w/o rspec
+#  # This is a RubyGem and is tested with RSpec, so obviously:
+#  rubocop-ruby1_9: rubocop-lts/rubygem_rspec.yml # or rubocop-lts/rubygem.yml w/o rspec
+#  # Also, convention over configuration, so obviously:
+#  rubocop-ruby1_9: rubocop.yml # for the ruby + rspec
 
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Metrics/LineLength:
-  Max: 120
-
-###################################################################
-# Rules that allow preservation of ruby 1.8.7 / ree compatibility #
-###################################################################
-# Required to match the rubocop-ruby1_8.yml config so run passes  #
-#   regardless of which is used against this project              #
-###################################################################
-
-Style/Documentation:
-  Enabled: false
-
-# Ruby 1.8.7 needs the . on chain of method calls at the end of a line
-Style/DotPosition:
-  EnforcedStyle: trailing
-
-Style/FrozenStringLiteralComment:
-  Enabled: true
-
-# Ruby 1.8.7 doesn't have 1.9 style hash syntax
-Style/HashSyntax:
-  EnforcedStyle: hash_rockets
-
-# Ruby 1.8.7 doesn't have the -> lambda
-Style/Lambda:
-  Enabled: false
-
-Style/PercentLiteralDelimiters:
-  Enabled: false
-
-Style/SymbolArray:
-  EnforcedStyle: brackets
-
-Style/WordArray:
-  EnforcedStyle: brackets
+# But we are inside the gem, so we need a different paradigm here.
+inherit_from:
+  - rubocop-lts/rubygem_rspec.yml
