--- a/rubocop.yml
+++ b/rubocop.yml
@@ -1,16 +1,15 @@
-# Removed as of 0.80.0
-# braces setting is for compatibility with Ruby 2.7+
-# See:
-#  * https://github.com/rubocop/rubocop/issues/7641
-#  * https://github.com/rubocop/rubocop/pull/7643
-Style/BracesAroundHashParameters:
-  Enabled: true
-  EnforcedStyle: context_dependent
+# Change the file you inherit if you:
+# * use Rails,
+# * are creating a RubyGem, or
+# * don't use RSpec
+# As follows:
+#   inherit_gem:
+#     # Pick one:
+#     #  rubocop-ruby1_9: rubocop-lts/rails_rspec.yml # or rubocop-lts/rails.yml w/o rspec
+#     #  rubocop-ruby1_9: rubocop-lts/ruby_rspec.yml # or rubocop-lts/ruby.yml w/o rspec
+#     #  rubocop-ruby1_9: rubocop-lts/rubygem_rspec.yml # or rubocop-lts/rubygem.yml w/o rspec
+#     # Convention over configuration, hence loading this file just only Ruby and RSpec defaults:
+#     rubocop-ruby1_9: rubocop.yml # for the ruby + rspec
 
-# The encoding comments can be removed once the project drops Ruby 1.9 support (and this gem!).
-# Whole file UTF-8 Encoding is default in Ruby 2+, so the Encoding comment is usually not needed there.
-# See:
-#  * https://www.rubydoc.info/gems/rubocop/0.49.0/RuboCop/Cop/Style/Encoding
-Style/Encoding:
-  Enabled: true
-  EnforcedStyle: always
+inherit_from:
+  - rubocop-lts/ruby_rspec.yml
